--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family: 'Nunito Sans';
+  margin: 0;
+  outline: none;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+  --dark-blue: #12121a;
+  --red: #ff0040;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+#root, body{
+  background-color: var(--dark-blue);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.menu-displayed{
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main{
+  padding: 36px;
+}
+
+::-webkit-scrollbar{
+  background: var(--dark-blue);
+  width: 16px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: var(--red);
+  border: 4px solid var(--dark-blue);
 }
