--- a/src/components/Other/GamesListElement/GamesListElement.css
+++ b/src/components/Other/GamesListElement/GamesListElement.css
@@ -31,6 +31,10 @@
     gap: 8px;
 }
 
+.h2-price-percent{
+    font-size: 20px;
+}
+
 .div-games-list-element a{
     align-items: center;
     border: 1px solid var(--red);
@@ -70,4 +74,32 @@
 .div-games-list-element-buttons button img{
     height: 56%;
     width: auto;
+}
+
+@media (max-width: 450px) {
+    .div-games-list-element{
+        gap: 16px;
+        padding: 12px;
+        width: 216px;
+    }
+
+    .div-games-list-element h2{
+        font-size: 16px;
+    }
+
+    .div-games-list-element-img{
+        height: 196px;
+    }
+
+    .div-games-list-element-buttons a{
+        font-size: 12px;
+    }
+
+    .div-games-list-element-info p{
+        font-size: 12px;
+    }
+
+    .h2-price p{
+        font-size: 16px;
+    }
 }
