--- a/src/components/Layouts/GameLayout/GameLayout.css
+++ b/src/components/Layouts/GameLayout/GameLayout.css
@@ -1,19 +1,51 @@
 .div-game{
-    padding: 36px;
-}
-
-.div-game-info{
+    align-items: center;
     border-bottom: 1px solid var(--red);
     color: var(--red);
     display: flex;
+    flex-wrap: wrap;
     gap: 64px;
-    justify-content: space-between;
+    justify-content: center;
     padding-bottom: 32px;
     margin-bottom: 32px;
 }
 
-.div-game-info img{
+.div-game-img{
     border: 1px solid var(--red);
+    height: 600px;
+    width: auto;
+}
+
+.div-game-info{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+    height: max-content;
+    justify-content: space-between;
+}
+
+.div-game-accessibility{
+    align-items: center;
+    border-inline: 1px solid var(--red);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    justify-content: center;
+    padding-inline: 16px;
+    white-space: nowrap;
+}
+
+.div-game-accessibility img{
+    border: none;
+    height: auto;
+    width: 40px;
+}
+
+.div-game-accessibility div{
+    align-items: center;
+    display: flex;
+    gap: 16px;
 }
 
 .p-game-title{
@@ -25,9 +57,36 @@
     border: 1px solid var(--red);
     display: flex;
     flex-direction: column;
+    font-size: 32px;
+    gap: 24px;
+    height: min-content;
     justify-content: space-between;
-    padding: 36px;
-    width: 216px;
+    padding: 24px;
+    width: 324px;
+}
+
+.div-game-price p{
+    text-align: center;
+}
+
+.div-game-price button{
+    align-items: center;
+    background-color: var(--dark-blue);
+    border: 1px solid var(--red);
+    display: flex;
+    height: 48px;
+    justify-content: center;
+    width: 48px;
+}
+
+.div-game-price .wishlist-active{
+    background-color: var(--red);
+}
+
+.div-game-price button img{
+    border: none;
+    height: auto;
+    width: 48%;
 }
 
 .div-game-other-games{
@@ -55,4 +114,18 @@
     margin: 36px auto 0 auto;
     padding: 16px;
     text-decoration: none;
+}
+
+@media (max-width: 492px) {
+    .div-game-img{
+        height: 320px;
+    }
+
+    .p-game-title{
+        font-size: 32px;
+    }
+
+    .h2-other-games{
+        font-size: 32px;
+    }
 }
